# CodeGems

./: makefile  pyproject.toml
PRG/: app.py
PRG/tests/: test_app.py
events_and_handlers/: entrypoints.py  events.py  handlers.py  messagebus.py  models.py  repository.py  schemas.py  uow.py
events_and_handlers/tests/: test_events.py
