[tool.poetry]
name = "codegems"
version = "0.1.0"
description = ""
authors = ["Gleb"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
pytest = "^8.3.4"
ruff = "^0.9.2"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
